# jjvm

./: Dockerfile  README.md
jjvm/: Cargo.toml
jjvm/src/: main.rs
jjvm_loader/: Cargo.toml  main.rs
jjvm_loader/src/: class.rs  class_loader.rs  const_pool.rs  flags.rs  jvm_const.rs  lib.rs  main.rs  opcode.rs  signature.rs
jjvm_vm/: Cargo.toml
jjvm_vm/src/: frame.rs  heap.rs  jvm_val.rs  lib.rs  main.rs  vm.rs
jjvm_vm/src/stdlib/: boolean.rs  class.rs  file.rs  integer.rs  math.rs  mod.rs  scanner.rs  string.rs
